istio/shileizcc.com/shileizcc-gateway-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shileizcc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - "*"
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
