istio/shileizcc.com/shileizcc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shileizcc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - shileizcc.com
      - status.shileizcc.com
      - www.shileizcc.com
      - wiki.shileizcc.com
      - mirror.shileizcc.com
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
