istio/shileizcc.com/shileizcc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shileizcc-vs
spec:
  hosts:
  - shileizcc.com
  - status.shileizcc.com
  - www.shileizcc.com
  - wiki.shileizcc.com
  - mirror.shileizcc.com
  gateways:
  - shileizcc-gateway.default.svc.cluster.local
  - mesh
  http:
  - route:
    - destination:
        host: nginxplus
        subset: v1
